--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Crawford Collins Portfolio{% endblock %}
+{% block title %}Blog{% endblock %}
 {% block head %}
 	{{ super() }}
 {% endblock %}
