--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,11 +28,13 @@
 	<img src="/images/logo.png">
 	</div>
 	<a class="item" href='/'>Home</a>
-	<a class="item" href="/projects"></a>
+	<a class="item" href="/projects">Projects</a>
 	<a class="item" href="/blog">Blog</a>
-	<a class="item" href="/twitter">Twitter"</a>
-	<a class="item" href = '/github'>GitHub</a>
+	<a class="item" href="/twitter">Twitter</a>
+	<a class="item" href= '/github'>GitHub</a>
 	</div>
+	{% endblock %}
+	{% block content %}
 	{% endblock %}
 
 </body>
