card on landing page finished. needs copy

--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -10,6 +10,7 @@
 	<div id = "content">
 
 	{% block content %}
+	<div class = "ui stackable grid container">
 	<div class = "ui link cards" >
 	{% for project in projects %}
 
@@ -30,5 +31,6 @@
 	{% endfor %}
 	</div>
 	{% endblock %}
+	</div>
 	</div>
 </body>
