added h1 tag for projects

--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -8,8 +8,8 @@
 		{{ super() }}
 	{% endblock %}
 	<div id = "content">
-
 	{% block content %}
+	<h1>Projects</h1>
 	<div class = "ui stackable grid container">
 	<div class = "ui link cards" >
 	{% for project in projects %}
