added link to github profile

--- a/app/templates/github.html
+++ b/app/templates/github.html
@@ -10,6 +10,7 @@
 	<div id = "content">
 	{% block content %}
 	<h1>Github</h1>
+	<h3><a href="https://github.com/crawftv">View Full Github Profile</a>
         <div class="ui stackable grid container">
 		<div class="column">
 	
