Some copy is improved for homepage. Could be improved.

--- a/templates/root.html
+++ b/templates/root.html
@@ -10,31 +10,62 @@
 	{% block content %}
 	<div class="ui stackable grid container">
 	<div class = "equal width row">
-		<div class="column">
-		<div class="ui card">
-			<div class ="image">
-				<img src="https://raw.githubusercontent.com/crawftv/blog_photos/master/profile_pic.jpeg">
-			</div>
-			<div class="content">
-				<div class="header">Crawford Collins</div>
-				<div class="meta">Data Scientist</div>
-			</div>
+		<div class="four wide column">
+			<div class="ui card">
+				<div class ="image">
+					<img src="https://raw.githubusercontent.com/crawftv/blog_photos/master/profile_pic.jpeg">
+				</div>
+				<div class="content">
+					<div class="header">Crawford Collins</div>
+					<div class="meta">Data Scientist</div>
+				</div>
 		</div>
 		</div>
-		<div class="column">
-		<div class="ui items">
-			<div class="item">
-				<div class="content">
-					<div class="header">Header</div>
-					<div class="content"><p></p><p></p></div>
-				</div>		
-			</div>
-			<div class="item">
-				<div class="content">
-					<div class="header">Header</div>
-					<div class="content"><p></p><p></p></div>
-				</div>		
-			</div>
+		<div class="twelve wide column">
+			<div class="ui items">
+				<div class="item">
+					<div class="content">
+						<div class="header">About Me</div>
+						<div class="content">										
+							<div class="ui bulleted list">
+								<div class="item">Currently finishing the data science curriculum at Lamdba School</div>
+								<div class="item">Graduate of The University of Alabama</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="ui horizontal divider"></div>
+				<div class="item">
+					<div class="content">
+						<div class="header">Areas of Interest and Study</div>
+						<div class="content">
+							<div class="ui bulleted list">
+								<div class="item">Networks</div>
+								<div class="item">Linear Algebra </div>
+								<div class="item">Data Pipelines</div>
+								<div class="item">Recommender Systems</div>
+								<div class="item">Neural Networks</div>
+								<div class="item">Automation</div>
+							</div>
+						</div>	
+					</div>
+				</div>
+				<div class="ui horizontal divider"></div>
+				<div class="item">
+					<div class="content">
+						<div class="header">Tools</div>
+						<div class="content">
+							<div class="ui bulleted list">
+								<div class="item">Pandas & scikit-learn</div>
+								<div class="item">Keras</div>
+								<div class="item">Google Cloud Functions</div>
+								<div class="item">Flask</div>
+								<div class="item">NetworkX</div>
+								<div class="item">Annoy</div>
+							<div>
+						</div>
+					</div>
+				</div>
 		</div>
 		</div>
 	</div>
