chaned bulleted lists to relaxed items, removed dividers, fixed typos

--- a/templates/root.html
+++ b/templates/root.html
@@ -22,19 +22,18 @@
 		</div>
 		</div>
 		<div class="twelve wide column">
-			<div class="ui items">
+			<div class="ui relaxed items">
 				<div class="item">
 					<div class="content">
 						<div class="header">About Me</div>
 						<div class="content">										
 							<div class="ui bulleted list">
-								<div class="item">Currently finishing the data science curriculum at Lamdba School</div>
+								<div class="item">Currently finishing the data science curriculum at Lambda School</div>
 								<div class="item">Graduate of The University of Alabama</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="ui horizontal divider"></div>
 				<div class="item">
 					<div class="content">
 						<div class="header">Areas of Interest and Study</div>
@@ -50,7 +49,6 @@
 						</div>	
 					</div>
 				</div>
-				<div class="ui horizontal divider"></div>
 				<div class="item">
 					<div class="content">
 						<div class="header">Tools</div>
