updated education in root.html

--- a/templates/root.html
+++ b/templates/root.html
@@ -29,7 +29,23 @@
 						<div class="content">										
 							<div class="ui bulleted list">
 								<div class="item">Currently finishing the data science curriculum at Lambda School</div>
+									<div class ="ui bulleted list">
+										<div class="item">9 month full time course</div>
+										<div class="item">Curriculum</div>
+										<div class="ui bulleted list">
+											<div class="item">Descriptive statistics</div>
+											<div class="item">Predictive statistics</div>
+											<div class="item">Data engineering</div>
+											<div class="item">Machine Learning</div>
+											<div class="item">Month Long full stack project with Web dev students</div>
+											<div class="item">Computer Science</div>
+										</div>
+									</div>
 								<div class="item">Graduate of The University of Alabama</div>
+								<div class ="ui bulleted list">
+									<div class="item">Bachelors degree in Finance</div>
+									<div class="item">Minor in statistics</div>
+									<div class="item">Dean's List, Presidential Scholar, Outstanding Student in Finance</div>
 							</div>
 						</div>
 					</div>
