working on about me

--- a/templates/root.html
+++ b/templates/root.html
@@ -24,28 +24,43 @@
 		<div class="twelve wide column">
 			<div class="ui relaxed items">
 				<div class="item">
+					<div class="header">About Me</div>
 					<div class="content">
-						<div class="header">About Me</div>
+						<p>
+							
+						</p>
+					</div>
+				</div>
+				<div class="item">
+					<div class="content">
+						<div class="header">Education</div>
 						<div class="content">										
 							<div class="ui bulleted list">
-								<div class="item">Currently finishing the data science curriculum at Lambda School</div>
-									<div class ="ui bulleted list">
+								<div class="item">
+									<div><b>Data Science at Lambda School</b></div>
+									<div class ="list">
 										<div class="item">9 month full time course</div>
-										<div class="item">Curriculum</div>
-										<div class="ui bulleted list">
-											<div class="item">Descriptive statistics</div>
-											<div class="item">Predictive statistics</div>
-											<div class="item">Data engineering</div>
-											<div class="item">Machine Learning</div>
-											<div class="item">Month Long full stack project with Web dev students</div>
-											<div class="item">Computer Science</div>
+										<div class="item">
+											<div>Curriculum</div>
+											<div class="list">
+												<div class="item">Descriptive statistics</div>
+												<div class="item">Predictive statistics</div>
+												<div class="item">Data engineering</div>
+												<div class="item">Machine Learning</div>
+												<div class="item">Month Long full stack project with Web dev students</div>
+												<div class="item">Computer Science</div>
+											</div>
 										</div>
 									</div>
-								<div class="item">Graduate of The University of Alabama</div>
-								<div class ="ui bulleted list">
-									<div class="item">Bachelors degree in Finance</div>
-									<div class="item">Minor in statistics</div>
-									<div class="item">Dean's List, Presidential Scholar, Outstanding Student in Finance</div>
+								</div>
+								<div class="item">
+									<div><b>Graduate of The University of Alabama</b></div>
+									<div class ="list">
+										<div class="item">Bachelors degree in Finance</div>
+										<div class="item">Minor in statistics</div>
+										<div class="item">Dean's List, Presidential Scholar, Outstanding Student in Finance</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -80,6 +95,7 @@
 						</div>
 					</div>
 				</div>
+			</div>
 		</div>
 		</div>
 	</div>
