updating homepage to putting information in cards. Got papermill working

--- a/templates/root.html
+++ b/templates/root.html
@@ -24,11 +24,13 @@
 		<div class="twelve wide column">
 			<div class="ui relaxed items">
 				<div class="item">
-					<div class="header">About Me</div>
 					<div class="content">
-						<p>
-							
-						</p>
+						<div class="header">About Me</div>
+						<div class="content">
+							<p>
+								
+							</p>
+						</div>
 					</div>
 				</div>
 				<div class="item">
@@ -47,7 +49,7 @@
 												<div class="item">Predictive statistics</div>
 												<div class="item">Data engineering</div>
 												<div class="item">Machine Learning</div>
-												<div class="item">Month Long full stack project with Web dev students</div>
+												<div class="item">Month long full stack project with Web dev students</div>
 												<div class="item">Computer Science</div>
 											</div>
 										</div>
