--- a/templates/base.html
+++ b/templates/base.html
@@ -25,10 +25,7 @@
 <body>
 	{% block menu %}
 	<div class="ui stackable menu">
-	<div class="item">
-	<img src="/images/logo.png">
-	</div>
-	<a class="item" href='/'>Home</a>
+	<a class="item" href='/'>CrawfordC.com</a>
 	<a class="item" href="/projects">Projects</a>
 	<a class="item" href="/blog">Blog</a>
 	<a class="item" href="/twitter">Twitter</a>
