deploying revamped homepage

--- a/templates/root2.html
+++ b/templates/root2.html
@@ -26,11 +26,19 @@
                     <div class="ui fitted divider"></div>
                     <div class="content">
                         <p>
+                            <br>
                             I am a data scientist currently focusing on building data intensive applications. 
                             I use data to solve problems and visualizations to tell stories.
                             I explore networks and work on creating better recomendation systems.
+                            <br>
+                            <br>
                             I want to work on High Performance Computing and making code fast and efficient.
-                            I have spent almost all my time working in Python, but other languages I would like to use more are Julia, Swift, &Spark.
+                            I have spent almost all my time working in Python, but other languages I would like 
+                            to use more are Julia, Swift, & Spark.
+                            <br>
+                            <br>
+                            Before switching careers and becoming a data scientist I worked in the investment industry.
+    
                         </p>
                     </div>
                 </div>
