--- a/templates/projects.html
+++ b/templates/projects.html
@@ -9,7 +9,8 @@
 	{% endblock %}
 	<div id = "content">
 	{% block content %}
-	<h1>Projects</h1>
+	<h1 class="ui center aligned header">Projects</h1>
+	<div class="ui hidden divider"></div>
 	<div class = "ui stackable grid container">
 	<div class = "ui link cards" >
 	{% for project in projects %}
