--- a/templates/github.html
+++ b/templates/github.html
@@ -1,63 +1,63 @@
-{% extends "base.html" %}
-{% block title %}GitHub{% endblock %}
-{% block head %}
-	{{ super() }}
+{% extends "base.html" %} {% block title %}GitHub{% endblock %} {% block head %} {{ super() }}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.js">
+</script>
 {% endblock %}
+
 <body>
-	{% block menu %}
-		{{ super() }}
-	{% endblock %}
-	<div id = "content">
+	{% block menu %} 
+		{{ super() }} 
+	{% endblock %} 
 	{% block content %}
-
-	<h1>Github</h1>
-	<h3><a href="https://github.com/crawftv">View Full Github Profile</a></h3>
-	<div class="ui statistics">
-		<div class="statistic">
-			<div class="value">
-				{{ num_events }}
-			</div>
-			<div class="label">
-			Github Events
-			</div>
-		</div>
-	</div>
+    <div id="content">
+        <h1 class="ui center aligned header">Github</h1>
+        <div class="ui hidden divider"></div>
+        <h3><a href="https://github.com/crawftv">View Full Github Profile</a></h3>
+        <div class="ui statistics">
+            <div class="statistic">
+                <div class="value">
+                    {{ num_events }}
+                </div>
+                <div class="label">
+                    Github Events
+                </div>
+            </div>
+        </div>
+        <div class="ui hidden divider"></div>
         <div class="ui stackable grid container">
-		<div class="column">
-	
-			<div class="chartjs-wrapper"> 
+            <div class="column">
+                <div class="chartjs-wrapper">
+                    <canvas id="line-chart" class="chartjs" width="3" height="1" style="display: block; width: 770px; height: 385px;">
+                        {% block javascript %}
+                        <script>
+                            labels = JSON.parse({{labels|tojson}})
+                            data = JSON.parse({{data|tojson}})
+                            var ctx = document.getElementById("line-chart");
 
+                            var chart = new Chart(ctx, {
+                                type: "line",
+                                data: {
+                                    "labels": labels,
+                                    "datasets": [{
+                                        "label": "# of events on this date",
+                                        "data": data,
+                                        "fill": false,
+                                        "borderColor": "rgb(75,192,192)",
+                                        "lineTension": 0.1
+                                    }]
+                                },
+                                options: {
+                                    title: {
+                                        display: true,
+                                        text: "Github Activity Over Time"
+                                    }
+                                }
+                            });
+						</script>     
+						{% endblock %}
+                </div>
+			</div>
+        </div>
+    </div>
+    {% endblock %}
 
-		<canvas id="line-chart" class="chartjs" width="3" height="1" style="display: block; width: 770px; height: 385px;">
-		{% block javascript %}
-
-		<script>
-			labels = JSON.parse({{ labels | tojson }})
-			data = JSON.parse({{ data | tojson }})
-			var ctx = document.getElementById("line-chart");
-			
-			var chart = new Chart(ctx,{
-				type:"line",
-				data : {
-					"labels":labels,
-					"datasets": [ {
-						"label": "# of events on this date",
-						"data" : data,
-						"fill" : false,
-						"borderColor":"rgb(75,192,192)",
-						"lineTension":0.1}]},
-				options:{
-					title : {
-					display: true,
-					text: "Github Activity Over Time"
-					}}});
-		</script>
-		</div>
-		</div>
-	</div>
-	{% endblock %}
-
-
-	{% endblock %}
-	</div>
 </body>
