reworking github stats etl

--- a/templates/root2.html
+++ b/templates/root2.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
+{% extends "base2.html" %}
 {% block title %}Crawford Collins Portfolio{% endblock %}
 {% block head %}
 	{{ super() }}
 {% endblock %}
-<body>
+<body style="background-color:rgb(37,181,233);">
 	{% block menu %}
 		{{ super() }}
     {% endblock %}
