adding book tab

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,8 @@
 	{% block menu %}
 	<div class="ui stackable container menu">
 	<a class="item" href='/'>CrawfordC.com</a>
-	<a class="item" href="/projects">Projects</a>
+    <a class="item" href='https://book.crawfordc.com'>Book</a>
+    <a class="item" href="/projects">Projects</a>
 	<a class="item" href="/blog">Blog</a>
 	<a class="item" href="/twitter">Twitter</a>
 	<a class="item" href= '/github'>GitHub</a>
